syntax/tests/parsing/errors/expressions/ambiguousArrow.res
let a = b:int => "hi"

let x = {
  let a = 1
  let b = 2
  a + b : int => "test"
}
